# LiuMo

./: .gitignore  CHANGELOG.md  LATEST_RELEASE_NOTE.md  LICENSE  README.md  download_release.sh  force_download_v1.4.4.sh  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
.sisyphus/plans/: V8.0_显示与功能修复总览.md  阶段1_核心连接层修复.md  阶段2_视觉效果恢复.md  阶段3_横竖排功能实现.md  阶段4_清理优化.md
docs/archived/: 前端重构方案_V8.0_ARCHIVED.md  后端规划方案_V8.0_ARCHIVED.md
public/: hb-subset.wasm
scripts/: ascii_view.js  check_image.js  check_schema.js  check_values.js  detect_crop.js  download-release.ps1  extract_changelog.js  fetch-assets.js  pre-release-check.ps1  process_icon.js  process_icon_rounded.js  verify_data.js  verify_final.js
scripts/etl/: analyze_and_clean.js  check_db.js  download_samples.js  full_pipeline.js  generate_mock_raw.js  verify_additions.js
src/: App.vue  main.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  font_utils.rs  lib.rs  main.rs
src/assets/: demo-poetry.json
src/components/: CharacterCell.vue  FontDropZone.vue  PaperCanvas.vue  PaperCanvasNext.vue  PoetrySelector.vue  SettingsPanel.vue
src/stores/: collection.ts  config.ts  poetry.ts
src/types/: dom-to-image-more.d.ts  poetry.ts
src/utils/: contentParser.ts  exporter.ts  fontSubsetting.ts  layoutEngine.ts  pdfPoc.ts
src/utils/layout/: constants.ts  index.ts  types.ts
src/utils/layoutEngine/: constants.ts  index.ts  (+2 more)
src/workers/: pdf.worker.ts
(+6 files in other folders)
