[package]
name = "liumo"
version = "1.3.1"
description = "流摹 - 沉浸式书法练习工具"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "liumo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-ico", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.4.5"
ttf-parser = "0.25.1"
base64 = "0.22.1"
tauri-plugin-dialog = "2.6.0"
rusqlite = { version = "0.38.0", features = ["bundled"] }
reqwest = { version = "0.13.1", features = ["json", "blocking", "stream"] }
tokio = { version = "1.49.0", features = ["fs", "io-util"] }
flate2 = "1.1.8"

